# standalone-chat

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  model.py  schemas.py  store.py
backend/app/routes/: chat.py  completions.py
backend/tests/: conftest.py  test_model.py  test_routes.py  test_schemas.py  test_store.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/components/: ConversationItem.test.tsx  InputBar.test.tsx  MessageBubble.test.tsx  TypingIndicator.test.tsx
frontend/src/__tests__/hooks/: chatReducer.test.ts  useTheme.test.ts
frontend/src/__tests__/lib/: api.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatShell.tsx  ChatWindow.tsx  ConversationItem.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx  ThemeToggle.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts  useTheme.ts
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts
